[project]
name = "SortedSet"
version = "1.0.0"
description = "Balanced Θ(√N)-ary tree SortedSet. It works with PyPy and is expected to be faster than balanced binary trees."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = []
authors = [{ name = "tatyam" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
